# simple-redis-cache

./: 404.html  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: tests-coverage.yaml
api/: index.html
changelog/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_6fd1713f0afaeb2d___init___py.html  z_6fd1713f0afaeb2d_encoder_py.html  z_6fd1713f0afaeb2d_key_generator_py.html  z_8ea71027e1c4fdb7___init___py.html  z_8ea71027e1c4fdb7_cache_py.html  z_bf34337a3a9eec88___init___py.html  z_bf34337a3a9eec88_cache_py.html
docs/: api.md  changelog.md  examples.md  index.md  installation.md  quickstart.md
docs/usage/: async.md  sync.md
examples/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
src/: __init__.py
src/simple-redis-cache/: cache.py
src/simple_redis_cache/: __init__.py  cache.py  encoder.py  key_generator.py
src/simple_redis_cache/asyncio/: cache.py
src/simple_redis_cache/sync/: cache.py
tests/: conftest.py  test_cache.py  test_encoder.py  test_key_generator.py
tests/cache/: test_async_cache.py  test_sync_cache.py
usage/async/: index.html
usage/sync/: index.html
