[project]
name = "simple-redis-cache"
version = "0.3.0"
description = "A library that simplifies working with Redis in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"