[project]
name = "simple-redis-cache"
version = "1.0.1"
description = "A library that simplifies working with Redis in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis>=8.0.1",
]
license = { file = "LICENSE" }
authors = [
    { name = "hotpotato89", email = "ramilreading@gmail.com" }
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/simple_redis_cache"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
